--- a/frontend/Where2GO/src/app/components/new-search/new-search.component.html
+++ b/frontend/Where2GO/src/app/components/new-search/new-search.component.html
@@ -1,21 +1,24 @@
-<div class="example-container">
-    <div class="form-container">
-      <form [formGroup]="loginForm" (submit)="submit()">
-        <mat-form-field class="form-field" appearance="outline">
-          <mat-label> Your Destination
-          </mat-label>
-          <input matInput formControlName="email" required>
-          <mat-error *ngIf="loginForm.controls.email.touched && loginForm.controls.email.invalid">
-            <span *ngIf="loginForm.controls.email.errors.required">This field is mandatory.</span>
-          </mat-error>
-        </mat-form-field>
-        <button mat-raised-button color="primary" type="submit" class="nav-item" [routerLink]="['/map-result']">Find Destination</button>
-        <mat-radio-group aria-label="Select an option">
-          <mat-radio-button value="1">Museum</mat-radio-button>
-          <mat-radio-button value="2">Leisure activity</mat-radio-button>
-          <mat-radio-button value="3">Park</mat-radio-button>
-          <mat-radio-button value="4">Sight</mat-radio-button>
-        </mat-radio-group>
-      </form>
+<form #userForm="ngForm" (ngSubmit)="userForm.form.valid && onSubmit(userForm)">
+    <div class="form-group">
+        <label>City</label>
+        <input class="heighttext" type="text" name="name" class="form-control" [(ngModel)]="model.city" #name="ngModel"
+            [ngClass]="{ 'is-invalid': userForm.submitted && name.invalid }" required>
+        <div class="invalid-feedback" *ngIf="userForm.submitted && name.invalid">
+            <p *ngIf="name.errors.required">City is required</p>
+        </div>
     </div>
-  </div>
+
+    <div class="form-group">
+        <label>Filter</label>
+        <select class="form-control" name="filter" [(ngModel)]="Filter">
+          <option value="">Select an option</option>
+          <option *ngFor="let filter of Filter" [value]="filter">
+            {{filter}}
+          </option>
+        </select>
+      </div>
+    
+      <div class="form-group">
+        <button class="btn btn-danger btn-block">Submit</button>
+      </div>
+    </form>
