adding city and filter in map-result url and first version of google maps

--- a/frontend/Where2GO/src/app/components/new-search/new-search.component.css
+++ b/frontend/Where2GO/src/app/components/new-search/new-search.component.css
@@ -1,3 +1,10 @@
+div {
+    padding-top: 10px;
+    padding-right: 30px;
+    padding-bottom: 10px;
+    padding-left: 80px;
+  }
+
 html, body {
     background: #f7f7f7 !important;
 }
